# twitch-rewards

./: .env.local  .env.prod  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
chatbox/: chatbox.css  chatbox.html  chatbox.js
migrations/: env.py
migrations/versions/: 387f1c8e1595_add_pronouns_column_to_user.py  3f1377c59979_add_title_column_to_user_table.py  93cdbbe54a11_create_user_table.py
tests/controllers/: test_authentication.py  test_user.py
twitchrewards/: config.py  main.py  server.py
twitchrewards/authentication/: __init__.py  jwt.py  session.py
twitchrewards/controllers/: __init__.py  authentication.py  home.py  user.py
twitchrewards/controllers/view_models/: __init__.py  authentication_data.py  titles.py  update_pronouns_data.py  user_view_model.py
twitchrewards/models/: __init__.py  pronouns.py  sqlalchemy_enum_type.py  titles.py  user.py
twitchrewards/repository/: __init__.py  database.py  user.py
twitchrewards/services/: user.py
twitchrewards/services/authentication/: __init__.py  jwt.py  session.py
twitchrewards/static/home/: pronouns-form.js
twitchrewards/static/login/: token.js
twitchrewards/static/logout/: logout.js
twitchrewards/twitch/: __init__.py  api.py
twitchrewards/views/: authenticate.html  home.html  login.html  logout.html
