[project]
name = "twitchrewards"
version = "0.1.0"
description = ""
authors = [
    {name = "Ada",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "poetry (>=2.0.0,<3.0.0)",
    "alembic (>=1.14.0,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
isort = "^5.13.2"
black = "^24.10.0"
pytest = "^8.3.4"

